[tool:isort]
force_single_line = True
line_length = 79
known_first_party = voltaire
default_section = THIRDPARTY
forced_separate = test_voltaire
not_skip = __init__.py
skip = migrations

[bdist_wheel]
universal=1

[options]
tests_require =
  pytest
  pytest-cov
  pytest-shell

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest
